force-app/main/default/objects/Account/fields/NumberOfRooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRooms__c</fullName>
    <label>Number of Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>