force-app/main/default/objects/Account/fields/OpeningTimeFriday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeFriday__c</fullName>
    <label>Opening Time - Friday</label>
    <type>TextArea</type>
</CustomField>