force-app/main/default/objects/Account/fields/OpeningTimeMonday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeMonday__c</fullName>
    <label>Opening Time - Monday</label>
    <type>TextArea</type>
</CustomField>