force-app/main/default/objects/Account/fields/OpeningTimeSaturday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeSaturday__c</fullName>
    <label>Opening Time - Saturday</label>
    <type>TextArea</type>
</CustomField>