force-app/main/default/objects/Account/fields/OpeningTimeSunday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeSunday__c</fullName>
    <label>Opening Time - Sunday</label>
    <type>TextArea</type>
</CustomField>