force-app/main/default/objects/Account/fields/OpeningTimeThursday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeThursday__c</fullName>
    <label>Opening Time - Thursday</label>
    <type>TextArea</type>
</CustomField>