force-app/main/default/objects/Account/fields/OpeningTimeTuesday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeTuesday__c</fullName>
    <label>Opening Time - Tuesday</label>
    <type>TextArea</type>
</CustomField>