force-app/main/default/objects/Account/fields/OpeningTimeWednesday__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimeWednesday__c</fullName>
    <label>Opening Time - Wednesday</label>
    <type>TextArea</type>
</CustomField>