force-app/main/default/objects/Account/fields/OrderBlockReason__c.field-meta.xml
<CustomField>
    <fullName>OrderBlockReason__c</fullName>
    <description>Order is Blocked for Customer</description>
    <inlineHelpText>Order is Blocked for Customer</inlineHelpText>
    <label>Order Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>General Block</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>All Free of Charge</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Test Block</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 DRM Billing Block</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09 DRM Billing Block</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Navision Block</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Test (e)</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Suspected Cerberus Fraud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>