force-app/main/default/objects/Account/fields/OrderNotifiesParent__c.field-meta.xml
<CustomField>
    <fullName>OrderNotifiesParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Notifies Parent</label>
    <type>Checkbox</type>
</CustomField>