force-app/main/default/objects/Account/fields/OrderRelatedRemarks__c.field-meta.xml
<CustomField>
    <fullName>OrderRelatedRemarks__c</fullName>
    <label>Order Related Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>