force-app/main/default/objects/Account/fields/PalletExchangePossible__c.field-meta.xml
<CustomField>
    <fullName>PalletExchangePossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pallet Exchange Possible</label>
    <type>Checkbox</type>
</CustomField>