force-app/main/default/objects/Account/fields/ParentERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ParentERPCustomerNumber__c</fullName>
    <label>Parent ERP Customer Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>