force-app/main/default/objects/Account/fields/ParentTaxId__c.field-meta.xml
<CustomField>
    <fullName>ParentTaxId__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(InvoiceRecipient__c)), InvoiceRecipient__c &lt;&gt; Id, NOT(ISBLANK(InvoiceRecipient__r.TaxID__c))), InvoiceRecipient__r.TaxID__c,
IF(NOT(ISBLANK(ConditionChainParent__r.TaxID__c)), ConditionChainParent__r.TaxID__c,
IF(NOT(ISBLANK(ConditionChainParent__r.ConditionChainParent__r.TaxID__c)), ConditionChainParent__r.ConditionChainParent__r.TaxID__c,
IF(NOT(ISBLANK(ConditionChainParent__r.ConditionChainParent__r.ConditionChainParent__r.TaxID__c)), ConditionChainParent__r.ConditionChainParent__r.ConditionChainParent__r.TaxID__c,
ConditionChainHead__r.TaxID__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent&apos;s Tax ID — Reference value of the second legal entity signal.</inlineHelpText>
    <label>Parent Tax ID</label>
    <type>Text</type>
</CustomField>