force-app/main/default/objects/Account/fields/PaymentBlockingReason__c.field-meta.xml
<CustomField>
    <fullName>PaymentBlockingReason__c</fullName>
    <label>Payment Blocking Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Blocked by Agent</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Blocked for all payment methods</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Blocked for manual payment</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Blocked due to outstanding payment</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Blocked by dunning procedure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>