force-app/main/default/objects/Account/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>