force-app/main/default/objects/Account/fields/PaymentTermsDays__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermsDays__c</fullName>
    <description>JJDSF-719</description>
    <formula>30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>