force-app/main/default/objects/Account/fields/PaymentTermsPercent__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermsPercent__c</fullName>
    <description>JJDSF-719</description>
    <formula>2.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>