force-app/main/default/objects/Account/fields/PedestrianZone__c.field-meta.xml
<CustomField>
    <fullName>PedestrianZone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedestrian Zone</label>
    <type>Checkbox</type>
</CustomField>