force-app/main/default/objects/Account/fields/PostingBlocked__c.field-meta.xml
<CustomField>
    <fullName>PostingBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posting Blocked</label>
    <type>Checkbox</type>
</CustomField>