force-app/main/default/objects/Account/fields/PriceAdjustmentAttribute__c.field-meta.xml
<CustomField>
    <fullName>PriceAdjustmentAttribute__c</fullName>
    <label>Price Adjustment Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>