force-app/main/default/objects/Account/fields/PriceInvisible__c.field-meta.xml
<CustomField>
    <fullName>PriceInvisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PriceInvisible</label>
    <type>Checkbox</type>
</CustomField>