force-app/main/default/objects/Account/fields/PuKCustomer__c.field-meta.xml
<CustomField>
    <fullName>PuKCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PuK Customer</label>
    <type>Checkbox</type>
</CustomField>