force-app/main/default/objects/Account/fields/QualityCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Check Required</label>
    <type>Checkbox</type>
</CustomField>