force-app/main/default/objects/Account/fields/RegulatorLevel__c.field-meta.xml
<CustomField>
    <fullName>RegulatorLevel__c</fullName>
    <inlineHelpText>Only for central regulators: &quot;Under&quot; if the account itself includes a regulator reference.</inlineHelpText>
    <label>Regulator Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Sub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>