force-app/main/default/objects/Account/fields/ResponsibleUser__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>