force-app/main/default/objects/Account/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <label>Rooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-1501</fullName>
            </value>
            <value>
                <fullName>51-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>&gt;500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>