force-app/main/default/objects/Account/fields/RootAccount__c.field-meta.xml
<CustomField>
    <fullName>RootAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Top-level organizational account of the chain structure, independent of ConditionChainParent__c and ConditionChainHead__c. No automatic population or account-category restriction.</description>
    <inlineHelpText>Select the top-level organizational account of the chain structure. This reference is independent of the condition chain parent and condition chain head.</inlineHelpText>
    <label>Root Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts by Organizational Root</relationshipLabel>
    <relationshipName>OrganizationalRootAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>