force-app/main/default/objects/Account/fields/RunningOpportunities__c.field-meta.xml
<CustomField>
    <fullName>RunningOpportunities__c</fullName>
    <description>Counts the number of running opportunities in the context of winning new customer (see F153)
Count all opportunities of an account, which are not in stage &apos;closed lost&apos; or &apos;closed won&apos;</description>
    <label>Running Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>