force-app/main/default/objects/Account/fields/SalesAmountCYToday__c.field-meta.xml
<CustomField>
    <fullName>SalesAmountCYToday__c</fullName>
    <label>Sales Amount CY-Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>