force-app/main/default/objects/Account/fields/SalesAmountLYTotal__c.field-meta.xml
<CustomField>
    <fullName>SalesAmountLYTotal__c</fullName>
    <label>Sales Amount LY-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>