force-app/main/default/objects/Account/fields/SalesAreaManager__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area Manager (GL)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesAreaManagedBy</relationshipName>
    <type>Lookup</type>
</CustomField>