force-app/main/default/objects/Account/fields/SalesCategory__c.field-meta.xml
<CustomField>
    <fullName>SalesCategory__c</fullName>
    <label>Sales Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Communal feeding</fullName>
            </value>
            <value>
                <fullName>Gastronomy &amp; Other</fullName>
            </value>
            <value>
                <fullName>Procurement Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>