force-app/main/default/objects/Account/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <description>Used by ERP Sync</description>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrganization</valueSetName>
    </valueSet>
</CustomField>