force-app/main/default/objects/Account/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Formal title used in correspondence (e.g., &apos;Herr&apos;, &apos;Frau&apos;, &apos;Firma&apos;). Determines how the contact is addressed in communications and legal documents.</description>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frau</fullName>
            </value>
            <value>
                <fullName>Herr</fullName>
            </value>
            <value>
                <fullName>Firma</fullName>
            </value>
            <value>
                <fullName>Herr und Frau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>