force-app/main/default/objects/Account/fields/SanctionCheck__c.field-meta.xml
<CustomField>
    <fullName>SanctionCheck__c</fullName>
    <inlineHelpText>Until the account has passed the sanction check, associated opportunities cannot be continued.</inlineHelpText>
    <label>Sanction Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unaudited</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>