force-app/main/default/objects/Account/fields/SelectionOfBeverages__c.field-meta.xml
<CustomField>
    <fullName>SelectionOfBeverages__c</fullName>
    <label>Selection of beverages</label>
    <type>TextArea</type>
</CustomField>