force-app/main/default/objects/Account/fields/SelfBilled__c.field-meta.xml
<CustomField>
    <fullName>SelfBilled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Self-signal for Switch 4. SAP Rule: Partner Role RE = AG → Check the box.</inlineHelpText>
    <label>Self Billed</label>
    <type>Checkbox</type>
</CustomField>