force-app/main/default/objects/Account/fields/ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>ShippingCondition__c</fullName>
    <description>Used by ERP sync</description>
    <label>Shipping Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCondition</valueSetName>
    </valueSet>
</CustomField>