force-app/main/default/objects/Account/fields/ShipToParty__c.field-meta.xml
<CustomField>
    <fullName>ShipToParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-to Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Ship-to Party)</relationshipLabel>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>