force-app/main/default/objects/Account/fields/SoldToParty__c.field-meta.xml
<CustomField>
    <fullName>SoldToParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold-to Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Sold-to Party)</relationshipLabel>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>