force-app/main/default/objects/Account/fields/StatisticChainHead__c.field-meta.xml
<CustomField>
    <fullName>StatisticChainHead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistic Chain Head</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Statistic Chain Head)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>