force-app/main/default/objects/Account/fields/StatisticChainParent__c.field-meta.xml
<CustomField>
    <fullName>StatisticChainParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistic Chain Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Statistic Chain Parent)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>