force-app/main/default/objects/Account/fields/StatisticParentERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>StatisticParentERPCustomerNumber__c</fullName>
    <label>Statistic Parent ERP Customer Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>