force-app/main/default/objects/Account/fields/SupervisedByTenantUserID__c.field-meta.xml
<CustomField>
    <fullName>SupervisedByTenantUserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervised By (Name)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsSupervised</relationshipName>
    <type>Lookup</type>
</CustomField>