force-app/main/default/objects/Account/fields/TaxID__c.field-meta.xml
<CustomField>
    <fullName>TaxID__c</fullName>
    <label>Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>