force-app/main/default/objects/Account/fields/TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxNumber__c</fullName>
    <label>Tax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>