force-app/main/default/objects/Account/fields/TypeOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>TypeOfBusiness__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retirement home</fullName>
            </value>
            <value>
                <fullName>Vending Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>