force-app/main/default/objects/Account/fields/TypeOfChain__c.field-meta.xml
<CustomField>
    <fullName>TypeOfChain__c</fullName>
    <label>Type of Chain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conditions optional</fullName>
            </value>
            <value>
                <fullName>Conditions mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>