force-app/main/default/objects/Account/fields/updatedmachine__c.field-meta.xml
<CustomField>
    <fullName>updatedmachine__c</fullName>
    <label>updated machine</label>
    <type>TextArea</type>
</CustomField>