force-app/main/default/objects/Account/fields/UseDifferentBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>UseDifferentBillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Different Billing Address?</label>
    <type>Checkbox</type>
</CustomField>