force-app/main/default/objects/Account/fields/UsesNewPricingModel__c.field-meta.xml
<CustomField>
    <fullName>UsesNewPricingModel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses new pricing model</label>
    <type>Checkbox</type>
</CustomField>