force-app/main/default/objects/Account/fields/VIP_Kunde__c.field-meta.xml
<CustomField>
    <fullName>VIP_Kunde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Kunde</label>
    <type>Checkbox</type>
</CustomField>