force-app/main/default/objects/Account/fields/WebshopFirstContactActivationDate__c.field-meta.xml
<CustomField>
    <fullName>WebshopFirstContactActivationDate__c</fullName>
    <label>Webshop First Contact Activation Date</label>
    <type>Date</type>
</CustomField>