force-app/main/default/objects/Account/fields/WebshopFrontpageWarning__c.field-meta.xml
<CustomField>
    <fullName>WebshopFrontpageWarning__c</fullName>
    <label>Webshop Frontpage Warning</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>