force-app/main/default/objects/Account/fields/WebshopRegistrationActivated__c.field-meta.xml
<CustomField>
    <fullName>WebshopRegistrationActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webshop Registration Activated</label>
    <type>Checkbox</type>
</CustomField>