force-app/main/default/objects/Account/validationRules/AccountCategoryChainLegalFormRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountCategoryChainLegalFormRequired</fullName>
    <active>true</active>
    <description>Ensures that records with a Chain or Regulator reference have either a Legal Form or VAT ID. Evaluated only on create or when relevant fields change. Only populated references are checked, and Account Classification bypass records are excluded.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_AccountClassificationVRs),
  OR(
    NOT(ISBLANK(ConditionChainParent__c)),
    NOT(ISBLANK(ConditionChainHead__c)),
    NOT(ISBLANK(CentralRegulator__c))
  ),
  ISBLANK(TEXT(LegalForm__c)),
  ISBLANK(TaxID__c),
  OR(
    ISNEW(),
    ISCHANGED(LegalForm__c),
    ISCHANGED(TaxID__c),
    ISCHANGED(ConditionChainParent__c),
    ISCHANGED(ConditionChainHead__c),
    ISCHANGED(CentralRegulator__c)
  )
)</errorConditionFormula>
    <errorDisplayField>LegalForm__c</errorDisplayField>
    <errorMessage>Please answer the legal-entity question: accounts in a chain structure require a legal form (or the explicit value ‚No legal entity status‘) or their own VAT ID.</errorMessage>
</ValidationRule>