force-app/main/default/objects/Account/validationRules/ArchivingReasonRequiredForStatusArchived.validationRule-meta.xml
<ValidationRule>
    <fullName>ArchivingReasonRequiredForStatusArchived</fullName>
    <active>false</active>
    <description>In case the Processing Status (Rating) is changed to Archived Prospect the Archiving Reason is required.</description>
    <errorConditionFormula>ISPICKVAL(Rating, &quot;Archived Prospect&quot;) &amp;&amp; 
ISPICKVAL(ArchivingReason__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>ArchivingReason__c</errorDisplayField>
    <errorMessage>Please select the reason why the prospect is archived.</errorMessage>
</ValidationRule>