force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ResponsibleUser__c</columns>
    <columns>ConditionChainParent__c</columns>
    <columns>ConditionChainHead__c</columns>
    <columns>StatisticChainParent__c</columns>
    <columns>ERPCustomerNumber__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>All Accounts</label>
</ListView>